src/test/ui/parser/doc-before-mod-rbrace.stderr
error: expected item after doc comment
  --> $DIR/doc-before-mod-rbrace.rs:4:5
   |
LL |     /// document
   |     ^^^^^^^^^^^^ this doc comment doesn't document anything

error: aborting due to previous error

